--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-594.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-510.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.73MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-166.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-665.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-481.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-433.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-640.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-861.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-4.73MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-285.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-510.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活1天)中国-264.4KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-728.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.13MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇸🇬 新加坡-2.27MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-473.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 捷克-1.00MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-433.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-264.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-728.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-473.2KB/s(Youtube:不良林)
+      - 捷克-1.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-433.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-264.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-728.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-473.2KB/s(Youtube:不良林)
+      - 捷克-1.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-433.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-264.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-728.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-473.2KB/s(Youtube:不良林)
+      - 捷克-1.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-433.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-264.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-728.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-473.2KB/s(Youtube:不良林)
+      - 捷克-1.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-433.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-264.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-728.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-473.2KB/s(Youtube:不良林)
+      - 捷克-1.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-433.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-264.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-728.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-473.2KB/s(Youtube:不良林)
+      - 捷克-1.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-594.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-665.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-433.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-264.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-728.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-473.2KB/s(Youtube:不良林)
+      - 捷克-1.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
