--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-12.41MB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-523.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.15MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-568.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-932.3KB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇨🇳 中国-488.0KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇨🇳 中国-333.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇨🇳 中国-168.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-750.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-4.46MB/s(Youtube:不良林), server: 202.61.141.130, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 202.61.141.130}}
+  - {name: 未知国家-543.7KB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.99MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-12.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-568.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.46MB/s(Youtube:不良林)
+      - 未知国家-543.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-12.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-568.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.46MB/s(Youtube:不良林)
+      - 未知国家-543.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-12.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-568.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.46MB/s(Youtube:不良林)
+      - 未知国家-543.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-12.41MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-12.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-568.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.46MB/s(Youtube:不良林)
+      - 未知国家-543.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-12.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-568.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.46MB/s(Youtube:不良林)
+      - 未知国家-543.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-12.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-568.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.46MB/s(Youtube:不良林)
+      - 未知国家-543.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-12.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-568.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-932.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.46MB/s(Youtube:不良林)
+      - 未知国家-543.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
